Configure `run` to use Java 14